# karna

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.txt  rustfmt.toml  tween.rs
assets/: Cargo.toml  fs.glsl  shader.frag  shader.vert  vs.glsl
assets/old/: texture.rs
assets/shaders/: cull.wgsl  pixel.wgsl  primitives.wgsl  quad.wgsl
assets/src/: atlas.rs  font.rs  lib.rs  texture.rs
common/: Cargo.toml
common/src/: dirty.rs  error.rs  lib.rs  slotmap.rs  utils.rs
crates/karna-core/: Cargo.toml
crates/karna-core/src/: app.rs  context.rs  input.rs  lib.rs  time.rs  window.rs
crates/karna-graphics/: Cargo.toml
crates/karna-graphics/src/: color.rs  lib.rs  renderer.rs
crates/karna-graphics/src/atlas/: mod.rs
crates/karna-graphics/src/batchers/: point.rs  triangle.rs
crates/karna-log/: Cargo.toml
crates/karna-log/src/: error.rs  lib.rs
crates/karna-math/: Cargo.toml
crates/karna-math/src/: chance.rs  lib.rs  matrix.rs  size.rs  vector.rs
crates/karna-opengl/: Cargo.toml
crates/karna-opengl/src/: buffers.rs  lib.rs  shaders.rs  texture.rs
crates/karna-traits/: Cargo.toml
crates/karna-traits/src/: lib.rs
engine/: Cargo.toml
engine/src/: a.rs  builder.rs  context.rs  input.rs  lib.rs  lifecycle.rs  scene.rs  time.rs  window.rs
engine/src/context/: audio.rs  input.rs  mod.rs  monitors.rs  scene_changer.rs  states.rs  sysinfo.rs  time.rs  window.rs
engine/src/state/: input.rs  mod.rs  monitors.rs  states.rs  sysinfo.rs  time.rs  window.rs
err/: Cargo.toml
err/src/: lib.rs
examples/: a.rs  audio.rs  basic.rs  camera.rs  circles.rs  controller.rs  cursor.rs  demo.rs  donut.rs  fa.rs  global_states.rs  image.rs  imgui.rs  immediate.rs  mesh.rs  mouse.rs  movement.rs  multi_window.rs  partial_texture.rs  particles.rs  rect.rs  shaders.rs  shapes.rs  sprite.rs  states.rs  statistics.rs  text.rs  text_demo.rs  text_simple.rs  texture.rs  texture_atlas.rs  texture_atlas_2.rs  texture_regions.rs  tween.rs  tweens.rs  ui_camera.rs  window.rs
examples/assets/: fs.glsl  sq.frag  sq.vert  vs.glsl
globals/: Cargo.toml
globals/src/: allocator.rs  consts.rs  lib.rs  logs.rs
globals/src/profiling/: memory.rs  mod.rs  render.rs  time.rs
gpu/: Cargo.toml
gpu/src/: lib.rs  texture.rs
gpu/src/core/: buffers.rs
logging/examples/: context.rs  demo.rs
logging/src/: context.rs  default.rs  err.rs  formatter.rs  lib.rs  macros.rs  style.rs  target.rs
macros/: Cargo.toml
macros-derive/: Cargo.toml
macros-derive/src/: lib.rs
macros/examples/: dirty_example.rs
macros/src/: lib.rs
math/: Cargo.toml
math/src/: chance.rs  lib.rs  matrix.rs  point.rs  points.rs  quaternion.rs  random.rs  size.rs  tween.rs  vector.rs
renderer/: Cargo.toml
renderer/old/: atlas.rs  camera.rs  color.rs  config.rs  fundamentals.rs  layer.rs  lib.rs  mesh.rs  sprite.rs  util.rs
renderer/old/mesh/: geometry.rs  group.rs  mod.rs  transform.rs
renderer/old/retained/: text_renderer.rs
renderer/old/shapes/: mod.rs  rect.rs
renderer/src/: asset_manager.rs  atlas.rs  batcher.rs  camera.rs  color.rs  config.rs  draw_calls.rs  gpu.rs  imgui_state.rs  immediate.rs  instanced.rs  layer.rs  lib.rs  mesh.rs  shader.rs  shaders.rs  sprite.rs  state.rs  target.rs  text.rs  text_renderer.rs  traits.rs  vertex.rs
renderer/src/immediate/: batcher.rs  handle.rs  line.rs  mod.rs  point.rs  triangle.rs
renderer/src/mesh/: dirty.rs  geometry.rs  material.rs  mod.rs  transform.rs
renderer/src/retained/: handle.rs  mod.rs  text.rs  text_renderer.rs
renderer/src/retained/mesh/: batch.rs  geometry.rs  material.rs  mod.rs  transform.rs
renderer/src/retained/text/: batch.rs  mod.rs  renderer.rs
renderer/src/shapes/: pixel.rs  rect.rs  rectangle.rs
renderer/src/subrenderers/: mod.rs  rects.rs
renderer/src/text/: mod.rs  renderer.rs  renderer_2d.rs
renderer/src/texture/: atlas.rs  mod.rs
shaders/: basic.wgsl  basic_2d.wgsl  immediate.wgsl  immediate_circle.wgsl  shader.wgsl  text.wgsl
src/: app.rs  audio.rs  context.rs  core.rs  flags.rs  input.rs  lib.rs  log.rs  math.rs  perf.rs  render.rs  time.rs  traits.rs  utils.rs  window.rs
src/gl/: buffers.rs  mod.rs  shaders.rs  texture.rs
src/math/: circles.rs  interpolation.rs  mat4.rs  mod.rs  random.rs  rng.rs  size.rs  tween.rs  utils.rs  vec2.rs  vec3.rs  vec4.rs  vector2.rs
src/render/: atlas.rs  cache.rs  color.rs  font.rs  mod.rs  renderer.rs  shaders.rs
utils/: Cargo.toml
utils/src/: label_map.rs  lazy.rs  lib.rs  macros.rs  map.rs  slot_map.rs  storage.rs  structs.rs  sysinfo.rs  timer.rs
