[package]
name = "karna"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["assets", "utils", "engine", "gpu","macros","math", "renderer"]

[workspace.dependencies]
utils = { path = "utils" }
macros = { path = "macros" }
math = { path = "math" }
winit = "0.30.12"
wgpu = "27.0.1"
renderer = { path = "renderer" }
traccia = "3.0.0"
image = "0.25.9"
gpu = { path = "gpu" }
assets = { path = "assets" }

[dependencies]
math.workspace = true
engine = { path = "engine" }
renderer.workspace = true
winit.workspace = true
pollster = "0.4"

[dev-dependencies]
image = "0.25.9"
rand = "0.8"
