[package]
name = "karna"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["assets", "utils", "engine", "gpu","macros","math", "renderer", "globals", "logging"]

[workspace.dependencies]
utils = { path = "utils" }
macros = { path = "macros" }
math = { path = "math" }
winit = "0.30.12"
wgpu = "28.0.0"
renderer = { path = "renderer" }
gpu = { path = "gpu" }
assets = { path = "assets" }
fontdue = "0.9.3"
rand = "0.9.2"
globals = { path = "globals" }
logging = { path = "logging" }
parking_lot = "0.12.5"
png = "0.18.0"

[dependencies]
math.workspace = true
engine = { path = "engine" }
renderer.workspace = true
winit.workspace = true
pollster = "0.4"
utils = { path = "utils" }
logging.workspace = true
assets.workspace = true

[dev-dependencies]
rand = "0.8"
