[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[dependencies]
gpu.workspace = true
utils.workspace = true
image.workspace = true
rect_packer = "0.2.1"
math.workspace = true
macros.workspace = true
wgpu.workspace = true
fontdue.workspace = true
logging.workspace = true
globals.workspace = true
parking_lot = "0.12.5"
