[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit.workspace = true
wgpu.workspace = true
macros.workspace = true
common.workspace = true
math.workspace = true
crossbeam-channel = "0.5.15"
spin_sleep = "1.3.3"
renderer = { path = "../renderer" }
pollster = "0.4.0"
traccia.workspace = true
rodio = "0.21.1"
