[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit.workspace = true
assets.workspace = true
wgpu.workspace = true
macros.workspace = true
utils.workspace = true
math.workspace = true
crossbeam-channel = "0.5.15"
spin_sleep = "1.3.3"
renderer = { path = "../renderer" }
traccia.workspace = true
rodio = "0.21.1"
ctor = "0.6.3"
gpu.workspace = true
