[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit.workspace = true
assets.workspace = true
wgpu.workspace = true
macros.workspace = true
utils.workspace = true
math.workspace = true
logging.workspace = true
crossbeam-channel = "0.5.15"
spin_sleep = "1.3.3"
renderer = { path = "../renderer" }
rodio = "0.21.1"
gpu.workspace = true
globals.workspace = true
parking_lot.workspace = true
