[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
math.workspace = true
winit.workspace = true
traccia.workspace = true
image = "0.25.6"
futures = "0.3.31"
futures-intrusive = "0.5.0"
err.workspace = true
imgui = { workspace = true, optional = true }
imgui-wgpu = { version = "0.25.0", optional = true }
imgui-winit-support = { version = "0.13.0", optional = true }

[features]
default = []
imgui = ["dep:imgui", "dep:imgui-wgpu", "dep:imgui-winit-support"]