[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
winit.workspace = true
macros.workspace = true
math.workspace = true
traccia.workspace = true
gpu.workspace = true
utils.workspace = true
assets.workspace = true
fontdue.workspace = true
globals.workspace = true
