[package]
name = "karna-core"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
sdl3 = { version = "0.14.4", features = ["build-from-source-static"] }
karna-math = { path = "../karna-math" }
karna-traits = { path = "../karna-traits" }
karna-log = { path = "../karna-log" }

[lib]
doctest = false
